estilizando os cards

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,8 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="card">
+            <div class="content">
+                <h2>01</h2>
+                <h3>DEUS</h3><br>
+                <p>
+                    Agradeço Deus pela proteção dia após dia, sou de opnião que: uma vida 
+                    sem orientação(plano) é uma vida perdida, e a melhor orientação vem de
+                    Deus, por essa e outras causas eu coloco-o em primeiro lugar na minha life
+                </p><br>
+                <a href="#">Mais informações</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="content">
+                <h2>02</h2>
+                <h3>Família</h3><br>
+                <p>
+                    Tem como não agradecer a Família?🤔 Sempre digo que 70% do 
+                    que eu me tornei agora foi sub-tutela da minha família, eles 
+                    têm me motivado muito a resolver os bug's da minha vida. GRATO
+                </p><br>
+                <a href="#">Mais informações</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="content">
+                <h2>03</h2>
+                <h3>Amigos / Colegas de trabalho</h3><br>
+                <p>
+                    Agradeço Deus pela proteção dia após dia, sou de opnião que: uma vida 
+                    sem orientação(plano) é uma vida perdida, e a melhor orientação vem de
+                    Deus, por essa e outras causas eu coloco-o em primeiro lugar na minha life
+                </p><br>
+                <a href="#">Mais informações</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
