--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,7 +18,7 @@
                     sem orientação(plano) é uma vida perdida, e a melhor orientação vem de
                     Deus, por essa e outras causas eu coloco-o em primeiro lugar na minha life
                 </p><br>
-                <a href="#">Mais informações</a>
+                <a href="#" onclick="redirecionar()">Mais informações</a>
             </div>
         </div>
 
@@ -31,7 +31,7 @@
                     que eu me tornei agora foi sub-tutela da minha família, eles 
                     têm me motivado muito a resolver os bug's da minha vida. GRATO
                 </p><br>
-                <a href="#">Mais informações</a>
+                <a href="#" onclick="redirecionar()">Mais informações</a>
             </div>
         </div>
 
@@ -44,9 +44,20 @@
                     sem orientação(plano) é uma vida perdida, e a melhor orientação vem de
                     Deus, por essa e outras causas eu coloco-o em primeiro lugar na minha life
                 </p><br>
-                <a href="#">Mais informações</a>
+                <a href="#" onclick="redirecionar()">Mais informações</a>
             </div>
         </div>
     </div>
+    <script src="../JS/vanilla-tilt.js"></script>
+    <script>
+        VanillaTilt.init(document.querySelectorAll(".card"), {
+            max:25,
+            speed:400
+        });
+
+        function redirecionar(){
+            window.open("https://github.com/Lucio-jose/animationTransitionCss/")
+        }
+    </script>
 </body>
 </html>
